--- a/QuizOnline_SE130639/nbproject/project.properties
+++ b/QuizOnline_SE130639/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.commons-codec-1.13.jar=..\\commons-codec-1.13.jar
+file.reference.javax.mail.jar=..\\javax.mail.jar
 file.reference.log4j-1.2.17.jar=..\\log4j-1.2.17.jar
 file.reference.sqljdbc4.jar=../sqljdbc4.jar
 includes=**
@@ -45,7 +46,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.commons-codec-1.13.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
