--- a/QuizOnline_SE130639/web/WEB-INF/log4j.properties
+++ b/QuizOnline_SE130639/web/WEB-INF/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=DEBUG, file
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=C:/Users/PC/Desktop/LabWeb1/QuizOnline_SE130639/logs/QuizOnline.log
+log4j.appender.file.File=C:/Users/Duc Linh/Desktop/Lab1/LabJavaWeb1/QuizOnline_SE130639/logs/QuizOnline.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
